--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,95 +1,147 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 {% extends 'store/main.html' %} {% load static %} {% block content %}
-<link rel="stylesheet" href="{% static 'store.css' %}">
+<link rel="stylesheet" href="{% static 'store.css' %}" />
 
-<h3>Szűrő</h3>
 <form method="GET" action=".">
-
   <div class="form-row">
-    <div class="form-group col-12">
-      <div class="input-group">
-        <input class="form-control py-2 border-right-0 border" type="search" placeholder="Termék név" name="product_name">
+    <div class="form-group col-4">
+      <label>Márka</label>
+      <select id="inputState" class="form-control" name="brand"></select>
+    </div>
+    <div class="form-group col-4">
+      <div class="input-group" style="padding-top: 31px">
+        <input
+          class="form-control py-2 border-right-0 border"
+          type="search"
+          placeholder="Kulcsszó"
+          name="product_name"
+          id="pname"
+        />
         <span class="input-group-append">
-          <div class="input-group-text bg-transparent"><i class='bx bx-search-alt-2'></i></div>
+          <div class="input-group-text bg-transparent">
+            <i class="bx bx-search-alt-2"></i>
+          </div>
         </span>
       </div>
     </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-12">
-      <div class="input-group">
-        <input class="form-control py-2 border-right-0 border" type="search" placeholder="Gyártó" name="author_name">
-        <span class="input-group-append">
-          <div class="input-group-text bg-transparent"><i class='bx bx-search-alt-2'></i></div>
-        </span>
-      </div>
+
+    <div class="form-group col-4">
+      <label>Kategória</label>
+      <select id="inputState" class="form-control" name="category"></select>
     </div>
   </div>
 
   <div class="form-row">
-    <div class="form-group col-md-2 col-lg-2">
-      <label for="viewCountMin">Minimum megtekintés</label>
-      <input type="number" min="0" class="form-control" id="viewCountMin" placeholder="0" name="view_count_min">
+    <div class="form-group col-3 col-3">
+      <label>Értékelés (legalább)</label>
+      <input
+        type="number"
+        min="0"
+        max="4.9"
+        step="0.1"
+        class="form-control"
+        id="viewCountMin"
+        placeholder="0"
+        name="rating_min"
+      />
     </div>
-    <div class="form-group col-md-2 col-lg-2">
-      <label for="viewCountMax">Maximum megtekintés</label>
-      <input type="number" min="0" class="form-control" id="viewCountMax" placeholder="10000" name="view_count_max">
+    <div class="form-group col-3 col-3">
+      <label>Értékelés (legfeljebb)</label>
+      <input
+        type="number"
+        min="0"
+        max="5"
+        step="0.1"
+        class="form-control"
+        id="viewCountMax"
+        placeholder="5"
+        name="rating_max"
+      />
     </div>
-    <div class="form-group col-md-2 col-lg-2">
-      <label for="dateMin">Megjelenés dátuma</label>
-      <input type="date" class="form-control" id="dateMin" name="date_min">
+    <div class="form-group col-3 col-3">
+      <label>Ár (legalább)</label>
+      <input
+        type="number"
+        min="0"
+        step="1"
+        class="form-control"
+        id="viewCountMin"
+        placeholder="1500 Ft"
+        name="price_min"
+      />
     </div>
-    <div class="form-group col-md-2 col-lg-2">
-      <label for="dateMax">Megjelenés dátuma</label>
-      <input type="date" class="form-control" id="dateMax" name="date_max">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">Kategória</label>
-      <select id="inputState" class="form-control" name="category">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
+    <div class="form-group col-3 col-3">
+      <label>Ár (legfeljebb)</label>
+      <input
+        type="number"
+        min="0"
+        step="1"
+        class="form-control"
+        id="viewCountMax"
+        placeholder="14990 Ft"
+        name="price_max"
+      />
     </div>
   </div>
   <div class="form-group">
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="reviewed" name="reviewed">
-      <label class="form-check-label" for="reviewed">
-        Ellenőrzött
+      <input
+        style="font-size: larger"
+        class="form-check-input"
+        type="checkbox"
+        id="reviewed"
+        name="reviewed"
+      />
+      <label style="font-size: larger" class="form-check-label">
+        Hitelesített
       </label>
+      <button style="float: right" type="submit" class="btn btn-primary">
+        Keresés
+      </button>
     </div>
   </div>
-  <button type="submit" class="btn btn-primary">Keresés</button>
 </form>
 
-<div class="row" style="padding-top: 50px;">
+<div class="row" style="padding-top: 50px">
   {% for product in products %}
   <div class="col-lg-4">
-    <img class="thumbnail" src="{{product.imageURL}}" />
+    <img
+      class="thumbnail"
+      style="width: 100%; height: 200px"
+      src="{{product.imageURL}}"
+    />
     <div class="box-element product">
-      <h5><strong>{{product.pname}}</strong></h5>
-      <h6 style="font-size: smaller;"><strong>{{product.author.name}}&nbsp;|&nbsp;
-        
-        {% for category in product.category.all %}
-        {{ category }}
-        {% endfor %}
+      <h5>
+        <strong
+          >{{product.pname}}
+          <i
+            style="font-size: larger; float: right; color: gold"
+            class="bx bx-star"
+          ></i
+          ><span style="float: right; color: gold">{{product.rating}}</span>
+        </strong>
+      </h5>
+      <h6 style="font-size: smaller">
+        <strong
+          >{{product.brand.name}}&nbsp;|&nbsp; {% for category in
+          product.category.all %} {{ category }} {% endfor %} &nbsp;|&nbsp;
+          {{product.type}}
+        </strong>
+      </h6>
+      <hr />
+      <h6 style="font-size: small">{{product.description}}</h6>
 
-        &nbsp;|&nbsp;
-        
-        {% for type in product.type.all %}
-        {{ type }}
-        {% endfor %}
-      
-      </strong></h6>
-      <hr>
-      <h6 style="font-size: small;">{{product.description}}</h6>
-
-      <hr>
+      <hr />
 
       <button class="btn btn-outline-secondary add-btn">Kosárba</button>
       <a class="btn btn-outline-success" href="#">Megtekint</a>
-      <h4 style="display: inline-block; float: right"><strong>{{product.price|floatformat:0}} Ft</strong></h4>
+      <h4 style="display: inline-block; float: right">
+        <strong>{{product.price|floatformat:0}} Ft</strong>
+      </h4>
     </div>
   </div>
   {% endfor %}
