--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,147 +1,103 @@
-<link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-/>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 {% extends 'store/main.html' %} {% load static %} {% block content %}
-<link rel="stylesheet" href="{% static 'store.css' %}" />
+<link rel="stylesheet" href="{% static 'store.css' %}">
 
 <form method="GET" action=".">
+
   <div class="form-row">
     <div class="form-group col-4">
-      <label>Márka</label>
-      <select id="inputState" class="form-control" name="brand"></select>
+      <label >Márka</label>
+      <select id="inputState" class="form-control" name="brand">
+        <option ></option>
+        {% for bran in brands %}
+        <option value="{{ bran }}">{{ bran }}</option>
+        {% endfor %}
+      </select>
     </div>
     <div class="form-group col-4">
-      <div class="input-group" style="padding-top: 31px">
-        <input
-          class="form-control py-2 border-right-0 border"
-          type="search"
-          placeholder="Kulcsszó"
-          name="product_name"
-          id="pname"
-        />
+      <div class="input-group" style="padding-top: 32px;">
+        <input class="form-control py-2 border-right-0 border" type="search" placeholder="Kulcsszó" name="product_name" id="pname">
         <span class="input-group-append">
-          <div class="input-group-text bg-transparent">
-            <i class="bx bx-search-alt-2"></i>
-          </div>
+          <div class="input-group-text bg-transparent"><i class='bx bx-search-alt-2'></i></div>
         </span>
       </div>
-    </div>
+  </div>
 
     <div class="form-group col-4">
       <label>Kategória</label>
-      <select id="inputState" class="form-control" name="category"></select>
+      <select id="inputState" class="form-control" name="category">
+        <option ></option>
+        {% for cat in categories %}
+        <option value="{{ cat }}">{{ cat }}</option>
+        {% endfor %}
+      </select>
     </div>
+    
   </div>
-
+    
   <div class="form-row">
-    <div class="form-group col-3 col-3">
+    <div class="form-group col-2">
       <label>Értékelés (legalább)</label>
-      <input
-        type="number"
-        min="0"
-        max="4.9"
-        step="0.1"
-        class="form-control"
-        id="viewCountMin"
-        placeholder="0"
-        name="rating_min"
-      />
+      <input type="number" min="0" max="4.9" step="0.1" class="form-control" id="viewCountMin" placeholder="0" name="rating_min">
     </div>
-    <div class="form-group col-3 col-3">
+    <div class="form-group col-2">
       <label>Értékelés (legfeljebb)</label>
-      <input
-        type="number"
-        min="0"
-        max="5"
-        step="0.1"
-        class="form-control"
-        id="viewCountMax"
-        placeholder="5"
-        name="rating_max"
-      />
+      <input type="number" min="0" max="5" step="0.1" class="form-control" id="viewCountMax" placeholder="5" name="rating_max">
     </div>
-    <div class="form-group col-3 col-3">
+    <div class="form-group col-2">
       <label>Ár (legalább)</label>
-      <input
-        type="number"
-        min="0"
-        step="1"
-        class="form-control"
-        id="viewCountMin"
-        placeholder="1500 Ft"
-        name="price_min"
-      />
+      <input type="number" min="0" step="1" class="form-control" id="viewCountMin" placeholder="1500 Ft" name="price_min">
     </div>
-    <div class="form-group col-3 col-3">
+    <div class="form-group col-2">
       <label>Ár (legfeljebb)</label>
-      <input
-        type="number"
-        min="0"
-        step="1"
-        class="form-control"
-        id="viewCountMax"
-        placeholder="14990 Ft"
-        name="price_max"
-      />
+      <input type="number" min="0" step="1" class="form-control" id="viewCountMax" placeholder="14990 Ft" name="price_max">
+    </div>
+    <div class="form-group col-4">
+      <label>Alkategória</label>
+      <select id="inputState" class="form-control" name="category2">
+        <option></option>
+        {% for cat2 in categories2 %}
+        <option value="{{ cat2 }}">{{ cat2 }}</option>
+        {% endfor %}
+      </select>
     </div>
   </div>
   <div class="form-group">
     <div class="form-check">
-      <input
-        style="font-size: larger"
-        class="form-check-input"
-        type="checkbox"
-        id="reviewed"
-        name="reviewed"
-      />
-      <label style="font-size: larger" class="form-check-label">
-        Hitelesített
-      </label>
-      <button style="float: right" type="submit" class="btn btn-primary">
-        Keresés
-      </button>
+      <button style="float: right;" type="submit" class="btn btn-primary">Keresés</button>
     </div>
   </div>
 </form>
 
-<div class="row" style="padding-top: 50px">
+<div class="row" style="padding-top: 50px;">
   {% for product in products %}
   <div class="col-lg-4">
-    <img
-      class="thumbnail"
-      style="width: 100%; height: 200px"
-      src="{{product.imageURL}}"
-    />
+    <img class="thumbnail" style="width: 100%; height: 200px;" src="{{product.imageURL}}" />
     <div class="box-element product">
-      <h5>
-        <strong
-          >{{product.pname}}
-          <i
-            style="font-size: larger; float: right; color: gold"
-            class="bx bx-star"
-          ></i
-          ><span style="float: right; color: gold">{{product.rating}}</span>
-        </strong>
-      </h5>
-      <h6 style="font-size: smaller">
-        <strong
-          >{{product.brand.name}}&nbsp;|&nbsp; {% for category in
-          product.category.all %} {{ category }} {% endfor %} &nbsp;|&nbsp;
-          {{product.type}}
-        </strong>
-      </h6>
-      <hr />
-      <h6 style="font-size: small">{{product.description}}</h6>
+      <h5><strong>{{product.pname}}
+        <i style="font-size: larger; float: right; color: gold;" class='bx bx-star'></i><span style="float: right; color: gold;">{{product.rating}}</span>
+      </strong></h5>
+      <h6 style="font-size: smaller;"><strong>{{product.brand.name}}&nbsp;|&nbsp;
+        
+        {% for category in product.category.all %}
+        {{ category }}
+        {% endfor %}
 
-      <hr />
+        &nbsp;|&nbsp;
+        {% for category2 in product.category2.all %}
+        {{ category2 }}
+        {% endfor %}
+      
+      </strong></h6>
+      <hr>
+      <h6 style="font-size: small;">{{product.description}}</h6>
+
+      <hr>
 
       <button class="btn btn-outline-secondary add-btn">Kosárba</button>
       <a class="btn btn-outline-success" href="#">Megtekint</a>
-      <h4 style="display: inline-block; float: right">
-        <strong>{{product.price|floatformat:0}} Ft</strong>
-      </h4>
+      <h4 style="display: inline-block; float: right"><strong>{{product.price|floatformat:0}} Ft</strong></h4>
     </div>
   </div>
   {% endfor %}
