--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -16,7 +16,8 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="{% url 'store' %}">Kleinpapa Shop</a>
+
+	  <a class="navbar-brand" href="{% url 'home' %}"><i style="font-size: larger;" class='bx bx-home'></i></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -24,7 +25,7 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
+	        <a class="navbar-brand" href="{% url 'store' %}">Store<span class="sr-only">(current)</span></a>
 	      </li>
 	 
 	    </ul>
