--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>
-	<title>Shop</title>
+	<title>Vörös Shop</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
 	  <a class="navbar-brand" href="{% url 'home' %}"><i style="font-size: larger;" class='bx bx-home'></i></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,8 +25,12 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
-	        <a class="navbar-brand" href="{% url 'store' %}">Store<span class="sr-only">(current)</span></a>
+	        <a class="navbar-brand" href="{% url 'store' %}">Bolt<span class="sr-only">(current)</span></a>
 	      </li>
+		  <li class="nav-item active">
+	        <a class="navbar-brand" href="{% url 'store' %}">Valami<span class="sr-only">(current)</span></a>
+	      </li>
+	 
 	 
 	    </ul>
 	    <div class="form-inline my-2 my-lg-0">
@@ -41,7 +45,7 @@
 	  </div>
 	</nav>
 
-     <div class="container">
+     <div class="container" style="padding-top: 3%;">
             <br>
             {% block content %}
 
