--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -2,62 +2,127 @@
 {% load static %}
 <html>
 <head>
-	<title>Vörös Shop</title>
+	<title>Dáridó Website</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-
+	<link rel="stylesheet" href="{% static 'css/main-page.css' %}">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+	<nav class="sidebar close">
+		<header>
+			<div class="image-text">
+				<span class="image">
+					<img src="{% static 'images/cart.png' %}">
+				</span>
 
-	  <a class="navbar-brand" href="{% url 'home' %}"><i style="font-size: larger;" class='bx bx-home'></i></a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
+				<div class="text header-text">
+					<span class="name">Dáridó Website</span>
+				</div>
+			</div>
 
-	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="navbar-nav mr-auto">
-	      <li class="nav-item active">
-	        <a class="navbar-brand" href="{% url 'store' %}">Bolt<span class="sr-only">(current)</span></a>
-	      </li>
-		  <li class="nav-item active">
-	        <a class="navbar-brand" href="{% url 'store' %}">Valami<span class="sr-only">(current)</span></a>
-	      </li>
-	 
-	 
-	    </ul>
-	    <div class="form-inline my-2 my-lg-0">
-	     	<a href="#"class="btn btn-warning">Login</a>
-	     	
-	     	<a href="{% url 'cart' %}">
-	    		<img  id="cart-icon" src="{% static 'images/cart.png' %}">
-	    	</a>
-	    	<p id="cart-total">0</p>
+			<i class='bx bx-chevron-right toggle' ></i>
+		</header>
 
-	    </div>
-	  </div>
+		<div class="menu-bar">
+			<div class="menu">
+				<ul class="menu-links">
+					<li class="nav-link">
+						<a href="{% url 'home' %}">
+							<i class='bx bx-home-alt icon'></i>
+							<span class="text nav-text">Kezdőlap</span>
+						</a>
+					</li>
+					<li class="nav-link">
+						<a href="{% url 'store' %}">
+							<i class='bx bx-store icon'></i>
+							<span class="text nav-text">Bolt</span>
+						</a>
+					</li>
+					<li class="nav-link bottom">
+						<a href="{% url 'cart' %}">
+							<i class='bx bx-cart icon' ></i>
+							<span class="text nav-text">Kosár</span>
+						</a>
+					</li>
+					<li class="nav-link">
+						<a href="">
+							<i class='bx bx-conversation icon' ></i>
+							<span class="text nav-text">Fórum</span>
+						</a>
+					</li>
+					<li class="nav-link">
+						<a href="">
+							<i class='bx bxl-youtube icon'></i>
+							<span class="text nav-text">Útmutató</span>
+						</a>
+					</li>
+					<li class="nav-link">
+						<a href="">
+							<i class='bx bx-group icon'></i>
+							<span class="text nav-text">Rólunk</span>
+						</a>
+					</li>
+					<li class="nav-link">
+						<a href="">
+							<i class='bx bx-envelope icon'></i>
+							<span class="text nav-text">Kapcsolat</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+				<div class="bottom-content">
+					<ul>
+						<li class="nav-link">
+							<a href="">
+								<i class='bx bx-log-in icon'></i>
+								<span class="text nav-text">Bejelentkezés</span>
+							</a>
+						</li>
+						<li class="nav-link">
+							<a href="">
+								<i class='bx bx-log-out icon'></i>
+								<span class="text nav-text">Kijelentkezés</span>
+							</a>
+						</li>
+						<li class="mode nav-link">
+
+								<div class="moon-sun">
+									<i class='bx bxs-moon icon dark'></i>
+									<i class='bx bx-moon icon light'></i>
+								</div>
+								<span class="mode-text text">Sötét mód</span>
+		
+								<div class="toggle-switch">
+									<span class="switch"></span>
+								</div>
+
+						</li>
+					</ul>
+				</div>
+			</div>
 	</nav>
 
-     <div class="container" style="padding-top: 3%;">
-            <br>
-            {% block content %}
+	<script src="{% static 'js/switch.js' %}"></script>
+	
+     <section class="home">
+		<div class="container" style="max-width: 75%; margin-top: 30px;">
+        {% block content %}
 
 
-            {% endblock content %}
-         </div>
+        {% endblock content %}
+		</div>
+	</section>
 
-
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	
 </body>
 </html>
