--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -3,7 +3,7 @@
 <form method="GET" action=".">
 
   <div class="form-row">
-    <div class="form-group col-4">
+    <div class="form-group col-lg-4 col-md-6 col-sm-12 balance">
       <label >Márka</label>
       <select id="inputState" class="form-control" name="brand">
         <option ></option>
@@ -12,7 +12,7 @@
         {% endfor %}
       </select>
     </div>
-    <div class="form-group col-4">
+    <div class="form-group col-lg-4 col-md-6 col-sm-12 balance">
       <div class="input-group" style="padding-top: 32px;">
         <input class="form-control py-2 border-right-0 border" type="search" placeholder="Kulcsszó" name="product_name" id="pname">
         <span class="input-group-append">
@@ -21,7 +21,7 @@
       </div>
   </div>
 
-    <div class="form-group col-4">
+    <div class="form-group col-lg-4 col-md-6 col-sm-12 balance">
       <label>Kategória</label>
       <select id="inputState" class="form-control" name="category">
         <option ></option>
@@ -34,23 +34,23 @@
   </div>
     
   <div class="form-row">
-    <div class="form-group col-2">
-      <label>Értékelés (legalább)</label>
+    <div class="form-group col-lg-2 col-md-4 col-sm-12 balance">
+      <label>Értékelés</label>
       <input type="number" min="0" max="4.9" step="0.1" class="form-control" id="viewCountMin" placeholder="0" name="rating_min">
     </div>
-    <div class="form-group col-2">
-      <label>Értékelés (legfeljebb)</label>
+    <div class="form-group col-lg-2 col-md-4 col-sm-12 balance">
+      <label>Értékelés</label>
       <input type="number" min="0" max="5" step="0.1" class="form-control" id="viewCountMax" placeholder="5" name="rating_max">
     </div>
-    <div class="form-group col-2">
-      <label>Ár (legalább)</label>
+    <div class="form-group col-lg-2 col-md-4 col-sm-12 balance">
+      <label>Ár</label>
       <input type="number" min="0" step="1" class="form-control" id="viewCountMin" placeholder="1500 Ft" name="price_min">
     </div>
-    <div class="form-group col-2">
-      <label>Ár (legfeljebb)</label>
+    <div class="form-group col-lg-2 col-md-4 col-sm-12 balance">
+      <label>Ár</label>
       <input type="number" min="0" step="1" class="form-control" id="viewCountMax" placeholder="14990 Ft" name="price_max">
     </div>
-    <div class="form-group col-4">
+    <div class="form-group col-lg-4 col-md-6 col-sm-12 balance">
       <label>Alkategória</label>
       <select id="inputState" class="form-control" name="category2">
         <option></option>
@@ -69,8 +69,8 @@
 
 <div class="row" style="padding-top: 50px;">
   {% for product in products %}
-  <div class="col-lg-4">
-    <img class="thumbnail" style="width: 100%; height: 200px;" src="{{product.imageURL}}" />
+  <div class="col-lg-4 col-md-6 col-sm-12 balance">
+    <img class="thumbnail" style="width: 100%; height: auto;" src="{{product.imageURL}}" />
     <div class="box-element product">
       <h5><strong>{{product.pname}}
         <i style="font-size: larger; float: right; color: gold;" class='bx bx-star'></i><span style="float: right; color: gold;">{{product.rating}}</span>
