--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -21,12 +21,13 @@
 	<nav class="sidebar close">
 		<header>
 			<div class="image-text">
-				<span class="image">
-					<img src="{% static 'images/cart.png' %}">
+				<span class="image" style="margin-left: 2.5vh;">
+					<img src="{% static 'images/logo.png' %}">
 				</span>
 
 				<div class="text header-text">
-					<span class="name">Dáridó Website</span>
+					<span class="name">Dáridó</span>
+					<span style="font-size: smaller;" class="name">The Digital Store</span>
 				</div>
 			</div>
 
