--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,4 +1,6 @@
-{% extends 'store/main.html' %} {% load static %} {% block content %}
+{% extends 'store/main.html' %}
+{% load static %}
+{% block content %}
 <h5>Kezdőlap</h5>
 
 {% endblock content %}
