--- a/static/css/main-page.css
+++ b/static/css/main-page.css
@@ -139,7 +139,7 @@ header .image-text .header-text{
 	transform: translateY(-50%) rotate(180deg);
 	height: 25px;
 	width: 25px;
-	background: var(--primary-color);
+	background: var(--grey);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -173,7 +173,7 @@ body.dark .sidebar header .toggle{
 }
 
 .sidebar li a:hover{
-	background: var(--primary-color);
+	background: var(--grey);
 }
 
 .sidebar li a:hover .icon,
@@ -256,14 +256,14 @@ body.dark .menu-bar .mode i.dark{
 }
 
 body.dark .switch::before{
-	left: 25px;
+	left: 2.5vh;
 }
 
 .home{
 	position: relative;
-	left: 250px;
+	left: 25vh;
 	height: 100vh;
-	width: calc(100% - 250px);
+	width: calc(100% - 25vh);
 	transition: var(--tran-05);
 }
 
@@ -272,8 +272,8 @@ body.dark .switch::before{
 }
 
 .sidebar.close ~ .home{
-	left: 92px;
-	width: calc(100% - 92px);
+	left: 9.2vh;
+	width: calc(100% - 9.2vh);
 }
 
 
@@ -282,44 +282,44 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .box-element{
-	box-shadow: var(--black) 0 0 16px;
+	box-shadow: var(--black) 0 0 1.6vh;
 	background-color: #fff;
-	padding: 10px;
+	padding: 2vh;
 	color: var(--black);
 }
 
 body.dark .box-element{
-	box-shadow:hsl(0, 0%, 100%) 0 0 16px;
+	box-shadow:hsl(0, 0%, 100%) 0 0 1.6vh;
 	color: var(--black);
-	padding: 10px;
+	padding: 2vh;
 }
 
 .box-element.product{
-	border-radius: 0px 0px 25px 25px;
+	border-radius: 0 0 2.5vh 2.5vh;
 }
 
 body.dark .box-element.product{
-	border-radius: 0px 0px 25px 25px;
+	border-radius: 0 0 2.5vh 2.5vh;
 }
 
 .thumbnail{
 	width: 100%;
-	height: 200px;
+	height: 20vh;
 	box-shadow:var(--black) 0 0 16px;
 	object-fit: cover;
-	border-radius: 50px 50px 0 0;
+	border-radius: 2.5vh 2.5vh 0 0;
 }
 
 body.dark .thumbnail{
 	width: 100%;
-	height: 200px;
+	height: 20vh;
 	box-shadow: var(--white) 0 0 16px;
 	object-fit: cover;
-	border-radius: 50px 50px 0 0;
+	border-radius: 2.5vh 2.5vh 0 0;
 }
 
 .product{
-	border-radius: 0 0 4px 4px;
+	border-radius: 0 0 0.4vh 0.4vh;
 }
 
 .bg-dark{
@@ -327,9 +327,9 @@ body.dark .thumbnail{
 }
 
 #cart-icon{
-	width:25px;
+	width: 2.5vh;
 	display: inline-block;
-	margin-left: 15px;
+	margin-left: 1.5vh;
 }
 
 #cart-total{
@@ -337,14 +337,14 @@ body.dark .thumbnail{
 	text-align: center;
 	color:#fff;
 	background-color: red;
-	width: 20px;
-	height: 25px;
+	width: 2vh;
+	height: 2.5vh;
 	border-radius: 50%;
-	font-size: 14px;
+	font-size: 1.4vh;
 }
 
 .col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
-	margin-top: 10px;
+	margin-top: 1vh;
 }
 
 .btn{
@@ -352,20 +352,20 @@ body.dark .thumbnail{
 }
 
 .row-image{
-	width: 100px;
+	width: 10vh;
 }
 
 .form-field{
-	width:250px;
+	width: 25vh;
 	display: inline-block;
-	padding: 5px;
+	padding: 0.5vh;
 }
 
 .cart-row{
 	display: flex;
     align-items: flex-stretch;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
+    padding-bottom: 1vh;
+    margin-bottom: 1vh;
     border-bottom: 1px solid #ececec;
 
 }
@@ -374,7 +374,7 @@ body.dark .thumbnail{
 .quantity{
 	display: inline-block;
 	font-weight: 700;
-	padding-right:10px;
+	padding-right:1vh;
 	
 
 }
@@ -383,7 +383,7 @@ body.dark .thumbnail{
 	width: 12px;
 	cursor: pointer;
 	display: block;
-	margin-top: 5px;
+	margin-top: 0.5vh;
 	transition:.1s;
 }
 
@@ -397,6 +397,30 @@ body.dark .thumbnail{
 }
 
 .balance{
-	margin-top: 10px;
-	margin-bottom: 20px;
+	margin-top: 1vh;
+	margin-bottom: 2vh;
+}
+
+.rating{
+	font-size: 2.2vh;
+	float: right;
+	color: rgb(210, 178, 0);
+}
+  
+  .rating-star{
+	font-size: 2.3vh;
+	float: right;
+	color: rgb(210, 178, 0);
+}
+
+body.dark .rating{
+	font-size: 2.2vh;
+	float: right;
+	color: rgb(210, 178, 0);
+}
+  
+body.dark .rating-star{
+	font-size: 2.3vh;
+	float: right;
+	color: rgb(210, 178, 0);
 }
