--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="{% static 'css/main-page.css' %}">
 	<link rel="stylesheet" href="{% static 'css/store.css' %}">
+	<link rel="stylesheet" href="{% static 'css/register.css' %}">
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	
 </head>
@@ -81,15 +82,15 @@
 				<div class="bottom-content">
 					<ul>
 						<li class="nav-link">
-							<a href="">
+							<a href="{% url 'register' %}">
 								<i class='bx bx-log-in icon'></i>
-								<span class="text nav-text">Bejelentkezés</span>
+								<span class="text nav-text">Regisztráció</span>
 							</a>
 						</li>
 						<li class="nav-link">
-							<a href="">
+							<a href="{% url 'login' %}">
 								<i class='bx bx-log-out icon'></i>
-								<span class="text nav-text">Kijelentkezés</span>
+								<span class="text nav-text">Bejelentkezés</span>
 							</a>
 						</li>
 						<li class="mode nav-link">
