--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -71,33 +71,59 @@
 
 <div class="row" style="padding-top: 50px;">
   {% for product in products %}
-  <div class="col-lg-4 col-md-6 col-sm-12 balance">
-    <img class="thumbnail" src="{{product.imageURL}}" />
-    <div class="box-element product">
-      <h5><strong>{{product.pname}}
-      </strong></h5>
-      <h6 style="font-size: smaller;"><strong>{{product.brand.name}}&nbsp;|&nbsp;
+    <div class="col-lg-4 col-md-6 col-sm-12 balance">
+      <img class="thumbnail" src="{{ product.imageURL }}" />
+      <div class="box-element product">
+        <h5><strong>{{ product.pname }}</strong></h5>
+        <h6 style="font-size: smaller;"><strong>{{ product.brand.name }}&nbsp;|&nbsp;
+          {% for category in product.category.all %}
+            {{ category }}
+          {% endfor %}
+          &nbsp;|&nbsp;
+          {% for category2 in product.category2.all %}
+            {{ category2 }}
+          {% endfor %}
+        </strong></h6>
+        <hr>
+        <h6 style="font-size: small; height: 30px;">{{ product.description }}</h6>
+        <hr>
+        <h4><strong>{{ product.price|floatformat:0 }} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{ product.rating }}</span></h4>
         
-        {% for category in product.category.all %}
-        {{ category }}
-        {% endfor %}
-
-        &nbsp;|&nbsp;
-        {% for category2 in product.category2.all %}
-        {{ category2 }}
-        {% endfor %}
-      
-      </strong></h6>
-      <hr>
-      <h6 style="font-size: small; height: 30px;">{{product.description}}</h6>
-      <hr>
-      <h4><strong>{{product.price|floatformat:0}} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{product.rating}}</span></h4>
-      
-
-      <button data-product={{product.id}} data-action="add" class="button-33 add-to-cart update-cart" role="button">Kosárba</button>
-      <button class="button-33 view" role="button">Megtekint</button>
+        <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart" role="button">Kosárba</button>
+        <button class="button-33 view" role="button" onclick="openQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{% for category2 in product.category2.all %}{{ category2 }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0 }} Ft', '{{ product.rating }}')">Megtekint</button>
+      </div>
     </div>
-  </div>
   {% endfor %}
 </div>
+
+<!-- Quick View Popup HTML -->
+<div id="csiresz" class="popup-view">
+  <div class="cardstore popup-card">
+    <a onclick="closeQuickView()"><i class="fas fa-times close-btn"></i></a>
+    <div class="cardstore-img">
+      <img id="quick-view-image" src="" alt="">
+    </div>
+    <div class="infók">
+      <h2 id="quick-view-name"></h2>
+      <p id="quick-view-details"></p>
+      <button data-product="{{ product.id }}" data-action="add" class="button-33 Kosárba add-to-cart update-cart" role="button">Kosárba</button>
+    </div>
+  </div>
+</div>
+
+<!-- Quick View Popup JavaScript -->
+<script type="text/javascript">
+ function openQuickView(imageURL, name, brand, category, category2, description, price, rating) {
+    document.getElementById('quick-view-image').src = imageURL;
+    document.getElementById('quick-view-name').innerHTML = name + '<br><span>' + brand + '</span>';
+    document.getElementById('quick-view-details').innerHTML = category + ' | ' + category2 + '<br>' + description + '<br><strong>' + price + '</strong> <i class="bx bx-star rating-star"></i><span class="rating">' + rating + '</span>';
+    document.getElementById('csiresz').classList.add('active');
+  }
+
+  function closeQuickView() {
+    document.getElementById('csiresz').classList.remove('active');
+  }
+</script>
+
+
 {% endblock content %}
