--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <body class="test">
-    <h1 class="cst">Csapatagok</h1>
+    <h1 class="cst">Csapattagok</h1>
     <div class="tartó">
         <div class="product">
             <div class="product-card">
