--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -155,6 +155,7 @@
 	
 	<script src="{% static 'js/cart.js' %}"></script>
 	<script src="{% static 'js/switch.js' %}"></script>
+	<script src="{% static 'js/filter.js' %}"></script>
 	
 </body>
 </html>
