--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -4,8 +4,19 @@
 <form method="GET" action=".">
   {% csrf_token %}
 
-  <div class="form-row">
-    <div class="form-group col-lg-4 col-md-12 col-sm-12 balance">
+  <div style="margin: auto;" class="form-group col-lg-4 col-md-4 col-sm-4 balance">
+    <div class="input-group" style="padding-top: 32px;">
+      <input class="form-control py-2 border-right-0 border" type="search" placeholder="Kulcsszó" name="product_name" id="pname">
+      <span class="input-group-append">
+        <div class="input-group-text bg-transparent"><i class='bx bx-search-alt-2'></i></div>
+      </span>
+      </div>
+      <p style="text-align: center;"><a id="moreFilter" href="#" class="nav-link">Részletes szűrés</a></p>
+  </div>
+
+  <div id="toggleFilter" class="hidden">
+  <div style="margin-top: 20px;" class="form-row">
+    <div class="form-group col-lg-6 col-md-12 col-sm-12 balance">
       <label >Márka</label>
       <select id="inputState" class="form-control" name="brand">
         <option ></option>
@@ -14,16 +25,7 @@
         {% endfor %}
       </select>
     </div>
-    <div class="form-group col-lg-4 col-md-12 col-sm-12 balance">
-      <div class="input-group" style="padding-top: 32px;">
-        <input class="form-control py-2 border-right-0 border" type="search" placeholder="Kulcsszó" name="product_name" id="pname">
-        <span class="input-group-append">
-          <div class="input-group-text bg-transparent"><i class='bx bx-search-alt-2'></i></div>
-        </span>
-      </div>
-  </div>
-
-    <div class="form-group col-lg-4 col-md-12 col-sm-12 balance">
+    <div class="form-group col-lg-6 col-md-12 col-sm-12 balance">
       <label>Kategória</label>
       <select id="inputState" class="form-control" name="category">
         <option ></option>
@@ -36,42 +38,36 @@
   </div>
     
   
-  <div class="form-row">
-    <div class="form-group col-lg-3 col-md-12 col-sm-12 balance">
-      <label>Alkategória</label>
-      <select id="inputState" class="form-control" name="category2">
-        <option></option>
-        {% for cat2 in categories2 %}
-        <option value="{{ cat2 }}">{{ cat2 }}</option>
-        {% endfor %}
-      </select>
-    </div>
-    <div class="form-group col-lg-2 col-md-6 col-sm-12 balance">
+  <div style="margin-bottom: 10px;" class="form-row">
+    <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
       <label>Értékelés</label>
       <input type="number" min="0" max="4.9" step="0.1" class="form-control" id="viewCountMin" placeholder="0" name="rating_min">
     </div>
-    <div class="form-group col-lg-2 col-md-6 col-sm-12 balance">
+    <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
       <label>Értékelés</label>
       <input type="number" min="0" max="5" step="0.1" class="form-control" id="viewCountMax" placeholder="5" name="rating_max">
     </div>
-    <div class="form-group col-lg-2 col-md-6 col-sm-12 balance">
+    <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
       <label>Ár</label>
       <input type="number" min="0" step="1" class="form-control" id="viewCountMin" placeholder="1500 Ft" name="price_min">
     </div>
-    <div class="form-group col-lg-2 col-md-6 col-sm-12 balance">
+    <div class="form-group col-lg-3 col-md-6 col-sm-12 balance">
       <label>Ár</label>
       <input type="number" min="0" step="1" class="form-control" id="viewCountMax" placeholder="14990 Ft" name="price_max">
     </div>
     
   </div>
+</div>
   <div class="form-group">
     <div class="form-check">
-      <button style="float: right;" type="submit" class="btn btn-primary">Keresés</button>
+      <button style="background-color: skyblue; width: 200px; margin: auto; display: block; font-weight: bold;" class="button-33 add-to-cart" role="button">Keresés</button>
     </div>
   </div>
 </form>
 
-<div class="row" style="padding-top: 50px;">
+
+
+<div class="row" style="margin-top: 100px;">
   {% for product in products %}
     <div class="col-lg-4 col-md-6 col-sm-12 balance">
       <img class="thumbnail" src="{{ product.imageURL }}" />
