--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -156,6 +156,9 @@
 	<script src="{% static 'js/cart.js' %}"></script>
 	<script src="{% static 'js/switch.js' %}"></script>
 	<script src="{% static 'js/filter.js' %}"></script>
+	<script src="{% static 'js/activeLink.js' %}"></script>
+
+	
 	
 </body>
 </html>
