--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -7,7 +7,7 @@
     <div class="tartó">
         <div class="product">
             <div class="product-card">
-                <h2 class="name">Miniszteri biztos</h2>
+                <h2 class="name">Technikai menedzser</h2>
                 <a class="popup-btn">Kiss Csongor</a>
                 <img src="static\images\kcsongor.jpg" class="product-img" alt="adam">
             </div>
@@ -18,15 +18,18 @@
                         <img src="static\images\kcsongor.jpg" alt="">
                     </div>
                     <div class="info">
-                        <h2>Kiss Csongor<br><span>Királyok</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
+                        <h2>Kiss Csongor<br><span>Dáridó Kft</span></h2>
+                        <p>Kiss Csongor vagyok, a cég technikus menedzsere. Tapasztalatom és szakértelmem a technikai területeken segíteni fog abban, hogy hatékonyan vezéreljem a technikai csapatot és biztosítsam a projektek sikeres végrehajtását. Az elmúlt évek során számos különböző technológiai kihívással találkoztam, és mindig lelkesen és hatékonyan oldottam meg azokat. Az erős vezetői képességeimnek és a technikai szaktudásomnak köszönhetően biztos vagyok benne, hogy képes leszek irányítani és inspirálni a csapatot.</p>
+                        <p><span class="elerhetoseg">Email: kiss.csongor@students.jedlik.eu</span><br>
+                            <span class="elerhetoseg">Telefonszám: +36 </span>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="product">
             <div class="product-card">
-                <h2 class="name">Miniszteri biztos</h2>
+                <h2 class="name">Média menedzser</h2>
                 <a class="popup-btn">Smauzer Dávid</a>
                 <img src="static\images\smauzer.jpg" class="product-img" alt="adam">
             </div>
@@ -37,16 +40,18 @@
                         <img src="static\images\smauzer.jpg" alt="">
                     </div>
                     <div class="info">
-                        <h2>Smauzer Dávid<br><span>Királyok</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
-                        
+                        <h2>Smauzer Dávid<br><span>Dáridó Kft</span></h2>
+                        <p>Smauzer Dávid vagyok, a cég média menedzsere. Tapasztalatom és szenvedélyem a médiaipar iránt segíteni fog abban, hogy hatékonyan koordináljam a médiastratégia kidolgozását és végrehajtását. Az elmúlt évek során számos különböző média projekten dolgoztam, és büszke vagyok arra, hogy sikeresen hozzájárultam a kampányok sikeréhez. Az erős kommunikációs képességeimnek és a kreativitásomnak köszönhetően bízom benne, hogy új lendületet és ötleteket hozhatok a csapatba.</p>
+                        <p><span class="elerhetoseg">Email: smauzer.david@students.jedlik.eu</span><br>
+                            <span class="elerhetoseg">Telefonszám: +36 </span>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="product">
             <div class="product-card">
-                <h2 class="name">Miniszteri biztos</h2>
+                <h2 class="name">Technikus</h2>
                 <a class="popup-btn">Csete Ádám</a>
                 <img src="static\images\adam.jpg" class="product-img" alt="adam">
             </div>
@@ -57,15 +62,18 @@
                         <img src="static\images\adam.jpg" alt="">
                     </div>
                     <div class="info">
-                        <h2>Csete Ádám<br><span>Királyok</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
+                        <h2>Csete Ádám<br><span>Dáridó Kft</span></h2>
+                        <p>Csete Ádám vagyok, a cég technikusa. Tapasztalatom és elkötelezettségem a technikai területeken segíteni fog abban, hogy hatékonyan támogassam a cég működését és fejlődését. Az elmúlt évek során számos különböző technikai problémával találkoztam, és mindig lelkesen és hatékonyan oldottam meg azokat. Az erős problémamegoldó képességeimnek és a technikai szaktudásomnak köszönhetően biztos vagyok benne, hogy hozzá tudok járulni a csapat és a cég sikeréhez.</p>
+                        <p><span class="elerhetoseg">Email: csete.adam@students.jedlik.eu</span><br>
+                            <span class="elerhetoseg">Telefonszám: +36 30 223 0028 </span>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="product">
             <div class="product-card">
-                <h2 class="name">Miniszteri biztos</h2>
+                <h2 class="name">Technikai dokumentáló</h2>
                 <a class="popup-btn">Baán Gyula</a>
                 <img src="static\images\gyula.jpg" class="product-img" alt="adam">
             </div>
@@ -76,16 +84,18 @@
                         <img src="static\images\gyula.jpg" alt="">
                     </div>
                     <div class="info">
-                        <h2>Baán Gyula<br><span>Királyok</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
-                    
+                        <h2>Baán Gyula<br><span>Dáridó Kft</span></h2>
+                        <p>Baán Gyula vagyok, és nagy lelkesedéssel csatlakoztam a csapathoz mint technikai dokumentáló. Tapasztalatom és hitelességem alapján rendkívül elkötelezett vagyok az informatikai folyamatok és termékek dokumentálása iránt. A precizitás és a strukturált gondolkodás segít abban, hogy átlátható és könnyen érthető dokumentumokat állítsak össze, amelyek hozzájárulnak a projektek hatékony végrehajtásához és a termékek minőségéhez. </p>
+                        <p><span class="elerhetoseg">Email: baan.gyula@students.jedlik.eu</span><br>
+                            <span class="elerhetoseg">Telefonszám: +36 </span>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="product">
             <div class="product-card">
-                <h2 class="name">Miniszteri biztos</h2>
+                <h2 class="name">Projektmenedzser</h2>
                 <a class="popup-btn">Szövérfi Csongor</a>
                 <img src="static\images\szcsongor.jpg" class="product-img" alt="adam">
             </div>
@@ -96,8 +106,11 @@
                         <img src="static\images\szcsongor.jpg" alt="">
                     </div>
                     <div class="info">
-                        <h2>Szövérfi Csongor<br><span>Királyok</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aperiam cupiditate delectus nesciunt vero sapiente facilis optio numquam omnis inventore autem alias, maxime quibusdam libero at eius voluptate. Neque, obcaecati.</p>
+                        <h2>Szövérfi Csongor<br><span>Dáridó Kft</span></h2>
+                        <p>Szövérfi Csongor vagyok, és nagy örömmel csatlakoztam a csapathoz, mint a projektmenedzser. Tapasztalatom és szenvedélyem a projektmenedzsment iránt segít abban, hogy hatékonyan vezéreljem a projekteket, és biztosítsam a sikeres kimenetelt. Az elmúlt évek során számos komplex projektben vettem részt, és büszke vagyok arra, hogy mindig határidőre és költségvetésen belül sikerült teljesítenünk. A kommunikációm erős és meggyőző, ami segít a csapat összekovácsolásában és a céljaink elérésében.</p>
+                        <p><span class="elerhetoseg">Email: csete.adam@students.jedlik.eu</span><br>
+                            <span class="elerhetoseg">Telefonszám: +36 30 223 0028 </span>
+                        </p>
                     </div>
                 </div>
             </div>
