--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -36,14 +36,14 @@
 
       <br />
       <div class="box-element hidden" id="payment-info">
-        <small>Paypal Options</small>
+        <small>Fizetési opciók</small>
         <button id="make-payment">Fizetés</button>
       </div>
     </div>
 
     <div class="col-lg-6">
       <div class="box-element">
-        <a class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Vissza a kosárhoz</a>
+        <a style="border-radius: 15px;" class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Vissza a kosárhoz</a>
         <hr />
         <h3>Rendelés összegzése</h3>
         <hr />
