--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -7,7 +7,7 @@
   <div style="margin: auto;" class="form-group col-lg-4 col-md-4 col-sm-4 balance">
     <div class="input-group" style="padding-top: 32px;">
       <input class="form-control py-2 border-right-0 border" type="search" placeholder="Kulcsszó" name="product_name" id="pname">
-      <span class="input-group-append">
+      <span class="input-group-append" id="pname-icon">
         <div class="input-group-text bg-transparent"><i class='bx bx-search-alt-2'></i></div>
       </span>
       </div>
