--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -4,7 +4,7 @@
 <div class="row">
 	<div class="col-lg-12">
 		<div class="box-element">
-               <a  class="btn btn-outline-dark" href="{% url 'store' %}">&#x2190; Vásárlás folytatása</a>
+               <a style="border-radius: 15px;" class="btn btn-outline-dark" href="{% url 'store' %}">&#x2190; Vásárlás folytatása</a>
                <br>
                <br>
                <table class="table">
@@ -12,7 +12,7 @@
                          <th><h5>Termékek: <strong>{{order.get_cart_items}}</strong></h5></th>
                          <th><h5>Végösszeg: <strong>{{order.get_cart_total}} Ft</strong></h5></th>
                          <th>
-                              <a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Fizetés</a>
+                              <a  style="float:right; margin:5px; border-radius: 15px;" class="btn btn-success" href="{% url 'checkout' %}">Fizetés</a>
                          </th>
                     </tr>
                </table>
