--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -159,6 +159,7 @@
 	<script src="{% static 'js/switch.js' %}"></script>
 	<script src="{% static 'js/filter.js' %}"></script>
 	<script src="{% static 'js/activeLink.js' %}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 	
 	
