--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-	<nav class="sidebar close">
+	<nav class="sidebar close" id="sidebar">
 		<header>
 			<div class="image-text">
 				<span class="image" style="margin-left: 2.5vh;">
@@ -157,8 +157,8 @@
 	
 	<script src="{% static 'js/cart.js' %}"></script>
 	<script src="{% static 'js/switch.js' %}"></script>
-	<script src="{% static 'js/filter.js' %}"></script>
 	<script src="{% static 'js/activeLink.js' %}"></script>
+	<script src="{% static 'js/home.js' %}"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 	
