--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -109,6 +109,7 @@
   </div>
 </div>
 
+<script src="{% static 'js/filter.js' %}"></script>
 <!-- Quick View Popup JavaScript -->
 <script type="text/javascript">
  function openQuickView(imageURL, name, brand, category, category2, description, price, rating) {
@@ -122,6 +123,8 @@
     document.getElementById('csiresz').classList.remove('active');
   }
 </script>
+
+
 
 
 {% endblock content %}
