--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -8,12 +8,12 @@
         <div class="product">
             <div class="product-card">
                 <h2 class="name">Miniszteri biztos</h2>
-                <a class="popup-btn">Kiss Csongor</a>
+                <a class="popup-btn" onclick="hideSidebar()">Kiss Csongor</a>
                 <img src="static\images\kcsongor.jpg" class="product-img" alt="adam">
             </div>
             <div class="popup-view">
                 <div class="popup-card">
-                    <a><i class="fas fa-times close-btn"></i></a>
+                    <a onclick="unhideSidebar()"><i class="fas fa-times close-btn"></i></a>
                     <div class="product-img">
                         <img src="static\images\kcsongor.jpg" alt="">
                     </div>
@@ -27,12 +27,12 @@
         <div class="product">
             <div class="product-card">
                 <h2 class="name">Miniszteri biztos</h2>
-                <a class="popup-btn">Smauzer Dávid</a>
+                <a class="popup-btn" onclick="hideSidebar()">Smauzer Dávid</a>
                 <img src="static\images\smauzer.jpg" class="product-img" alt="adam">
             </div>
             <div class="popup-view">
                 <div class="popup-card">
-                    <a><i class="fas fa-times close-btn"></i></a>
+                    <a onclick="unhideSidebar()"><i class="fas fa-times close-btn"></i></a>
                     <div class="product-img">
                         <img src="static\images\smauzer.jpg" alt="">
                     </div>
@@ -47,12 +47,12 @@
         <div class="product">
             <div class="product-card">
                 <h2 class="name">Miniszteri biztos</h2>
-                <a class="popup-btn">Csete Ádám</a>
+                <a class="popup-btn" onclick="hideSidebar()">Csete Ádám</a>
                 <img src="static\images\adam.jpg" class="product-img" alt="adam">
             </div>
             <div class="popup-view">
                 <div class="popup-card">
-                    <a><i class="fas fa-times close-btn"></i></a>
+                    <a onclick="unhideSidebar()"><i class="fas fa-times close-btn"></i></a>
                     <div class="product-img">
                         <img src="static\images\adam.jpg" alt="">
                     </div>
@@ -66,12 +66,12 @@
         <div class="product">
             <div class="product-card">
                 <h2 class="name">Miniszteri biztos</h2>
-                <a class="popup-btn">Baán Gyula</a>
+                <a class="popup-btn" onclick="hideSidebar()">Baán Gyula</a>
                 <img src="static\images\gyula.jpg" class="product-img" alt="adam">
             </div>
             <div class="popup-view">
                 <div class="popup-card">
-                    <a><i class="fas fa-times close-btn"></i></a>
+                    <a onclick="unhideSidebar()"><i class="fas fa-times close-btn"></i></a>
                     <div class="product-img">
                         <img src="static\images\gyula.jpg" alt="">
                     </div>
@@ -86,12 +86,12 @@
         <div class="product">
             <div class="product-card">
                 <h2 class="name">Miniszteri biztos</h2>
-                <a class="popup-btn">Szövérfi Csongor</a>
+                <a class="popup-btn" onclick="hideSidebar()">Szövérfi Csongor</a>
                 <img src="static\images\szcsongor.jpg" class="product-img" alt="adam">
             </div>
             <div class="popup-view">
                 <div class="popup-card">
-                    <a><i class="fas fa-times close-btn"></i></a>
+                    <a onclick="unhideSidebar()"><i class="fas fa-times close-btn"></i></a>
                     <div class="product-img">
                         <img src="static\images\szcsongor.jpg" alt="">
                     </div>
@@ -103,31 +103,6 @@
             </div>
         </div>
     </div>
-    
-
-    <script type="text/javascript">
-        var popupViews = document.querySelectorAll('.popup-view')
-        var popupBtns = document.querySelectorAll('.popup-btn')
-        var closeBtns = document.querySelectorAll('.close-btn')
-
-        var popup = function(popupClick){
-            popupViews[popupClick].classList.add('active');
-        }
-
-        popupBtns.forEach((popupBtn, i) => {
-            popupBtn.addEventListener("click", () => {
-                popup(i);
-            });
-        });
-
-        closeBtns.forEach((closeBtn) => {
-            closeBtn.addEventListener('click', () => {
-                popupViews.forEach((popupView) => {
-                    popupView.classList.remove('active');
-                });
-            });
-        });
-    </script>
 </body>
 
 {% endblock content %}
