--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -21,7 +21,7 @@
                         <h2>Kiss Csongor<br><span>Dáridó Kft</span></h2>
                         <p>Kiss Csongor vagyok, a cég technikus menedzsere. Tapasztalatom és szakértelmem a technikai területeken segíteni fog abban, hogy hatékonyan vezéreljem a technikai csapatot és biztosítsam a projektek sikeres végrehajtását. Az elmúlt évek során számos különböző technológiai kihívással találkoztam, és mindig lelkesen és hatékonyan oldottam meg azokat. Az erős vezetői képességeimnek és a technikai szaktudásomnak köszönhetően biztos vagyok benne, hogy képes leszek irányítani és inspirálni a csapatot.</p>
                         <p><span class="elerhetoseg">Email: kiss.csongor@students.jedlik.eu</span><br>
-                            <span class="elerhetoseg">Telefonszám: +36 </span>
+                            <span class="elerhetoseg">Telefonszám: +36 70 211 4952</span>
                         </p>
                     </div>
                 </div>
