--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -109,8 +109,8 @@
                     <div class="info">
                         <h2>Szövérfi Csongor<br><span>Dáridó Kft</span></h2>
                         <p>Szövérfi Csongor vagyok, és nagy örömmel csatlakoztam a csapathoz, mint a projektmenedzser. Tapasztalatom és szenvedélyem a projektmenedzsment iránt segít abban, hogy hatékonyan vezéreljem a projekteket, és biztosítsam a sikeres kimenetelt. Az elmúlt évek során számos komplex projektben vettem részt, és büszke vagyok arra, hogy mindig határidőre és költségvetésen belül sikerült teljesítenünk. A kommunikációm erős és meggyőző, ami segít a csapat összekovácsolásában és a céljaink elérésében.</p>
-                        <p><span class="elerhetoseg">Email: csete.adam@students.jedlik.eu</span><br>
-                            <span class="elerhetoseg">Telefonszám: +36 30 223 0028 </span>
+                        <p><span class="elerhetoseg">Email: szoverfi.csongor@students.jedlik.eu</span><br>
+                            <span class="elerhetoseg">Telefonszám: +36 </span>
                         </p>
                     </div>
                 </div>
