Kezdőlap fejlesztése, javítása

--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -2,8 +2,27 @@
 {% load static %}
 {% block content %}
 
+
+
 <body class="test">
-    <h1 class="cst">Csapattagok</h1>
+    <h1 class="text-center mt-5 mb-4">Mit tudsz nálunk vásárolni?</h1>
+    <div class="row masodikresz">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <img src="static\images\Bunyós Pityu x Mike Tyson - poló (3990 Ft).jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <p class="polo fs-5">Személyre szabott stílus és kényelem találkozik a mulatós zene iránti rajongással a pólók és pulóverek kategóriájában. Válogass egyedi design-ok között, melyek kifejezik a mulatós zene szeretetét és tiszteletét. Legyen szó akár Zámbó Jimmy, Delhusa Gjon vagy más ikonikus előadók emblémáiról, ezek a ruhadarabok nem csupán divatos megjelenést biztosítanak, hanem lehetővé teszik számodra, hogy büszkén mutasd meg hová tartozol és milyen zenéket kedvelsz. Kényelmes viseletükkel és minőségi anyagaikkal garantáltan kedvenceddé válnak mindennapi viseletedben, és emlékeztetni fognak arra, hogy a mulatós zene mindig veled van.</p>
+        </div>
+    </div>
+    <div class="row masodikresz">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <p class="lemezek fs-5">Keress mélyreható és érzelmekkel teli zenés élményeket a CD-k és DVD-k széles választékában. Fedezd fel újra az ikonikus mulatós dalokat, vagy gyűjtsd össze a kedvenc előadóid legújabb és leghíresebb albumait. Legyen szó akár Zámbó Jimmy, Delhusa Gjon, Pataky Attila vagy más nagy névről, az általunk kínált CD-k és DVD-k lehetővé teszik számodra, hogy elmerülj a mulatós zene világában bármikor, bárhol. Élvezd az élet zenéjét, és színesítsd az otthoni szórakozást ezekkel a kiváló minőségű hanghordozókkal, melyek méltóak a mulatós zene hagyományaira és hírnevére.</p>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <img src="static\images\Zámbó Jimmy - Karácsony Jimmyvel (CD, 3990 Ft).jpg" class="img-fluid lemezkep" alt="">
+        </div>
+    </div>
+    <h1 class="text-center mt-5 mb-4">A csapat tagjai</h1>
     <div class="tartó">
         <div class="product">
             <div class="product-card">
