--- a/static/css/kezdolap.css
+++ b/static/css/kezdolap.css
@@ -1,290 +1,314 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+}
 
-  .elerhetoseg {
-    left: 20px;
-    font-weight: 600;
-    display: block;
-  }
+.elerhetoseg {
+  left: 20px;
+  font-weight: 600;
+  display: block;
+}
 
-  .test {
-    min-height: 100vh;
-    justify-content: center;
-    align-items: center;
-  }
-  .cst{
-    text-align: center;
-    color: #0433ab;
-    font-size: 65px;
-  }
-  
-  .tartó {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-  }
-  
-  .product .product-card {
-    z-index: 1;
-    background: #010d2c;
-    position: relative;
-    width: 300px;
-    height: 400px;
-    margin: 40px;
-    border-radius: 10px;
-  }
-  
-  .product .product-card:before {
-    content: "";
-    background: rgba(255, 255, 255, 0.1);
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
-  
-  .product .product-card .product-img {
-    z-index: 1;
-    position: absolute;
-    max-width: 150px;
-    max-height: 200px;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 15px;
-  }
-  
-  .product .product-card .name {
-    z-index: 2;
-    color: #fff;
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    bottom: 130px;
-    font-size: 20px;
-    letter-spacing: 1px;
-  }
-  
-  .product .product-card .price {
-    z-index: 2;
-    color: #fff;
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    bottom: 80px;
-    font-size: 30px;
-    font-weight: 300;
-  }
-  
-  .product .product-card .popup-btn {
-    z-index: 2;
-    color: #021032;
-    background: #fefefe;
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 14px;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 1px;
-    padding: 10px 15px;
-    border-radius: 20px;
-    cursor: pointer;
-    width: auto;
-  }
-  
-  .product .popup-view {
-    z-index: 2;
-    background: rgba(255, 255, 255, 0.5);
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-  }
-  
-  .product .popup-view.active {
-    opacity: 1;
-    visibility: visible;
-  }
-  
+.test h1 {
+  color: #0433ab;
+  text-align: center;
+  font-size: 65px;
+  border-top: 2px solid #021032;
+  padding-top: 10px;
+  text-transform: capitalize;
+}
+
+.masodikresz {
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.polo {
+  text-align: right;
+  font-size: large;
+}
+
+.lemezek {
+  flex: 1;
+  font-size: large;
+  margin-right: 10px;
+}
+
+.lemezkep{
+  float: right;
+}
+
+.test {
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.tartó {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.product .product-card {
+  z-index: 1;
+  background: #010d2c;
+  position: relative;
+  width: 300px;
+  height: 400px;
+  margin: 40px;
+  border-radius: 10px;
+}
+
+.product .product-card:before {
+  content: "";
+  background: rgba(255, 255, 255, 0.1);
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.product .product-card .product-img {
+  z-index: 1;
+  position: absolute;
+  max-width: 150px;
+  max-height: 200px;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 15px;
+}
+
+.product .product-card .name {
+  z-index: 2;
+  color: #fff;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 130px;
+  font-size: 20px;
+  letter-spacing: 1px;
+}
+
+.product .product-card .price {
+  z-index: 2;
+  color: #fff;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 80px;
+  font-size: 30px;
+  font-weight: 300;
+}
+
+.product .product-card .popup-btn {
+  z-index: 2;
+  color: #021032;
+  background: #fefefe;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 14px;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 1px;
+  padding: 10px 15px;
+  border-radius: 20px;
+  cursor: pointer;
+  width: auto;
+}
+
+.product .popup-view {
+  z-index: 2;
+  background: rgba(255, 255, 255, 0.5);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.product .popup-view.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.product .popup-card {
+  position: relative;
+  display: flex;
+  width: 800px;
+  height: 500px;
+  margin: 20px;
+}
+
+.product .popup-card .product-img {
+  z-index: 2;
+  background: #021032;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45%;
+  height: 90%;
+  transform: translateY(25px);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.product .popup-card .product-img img {
+  z-index: 2;
+  position: relative;
+  height: 300;
+  width: 250px;
+  border-radius: 10px;
+}
+
+.product .popup-card .info {
+  z-index: 2;
+  background: #0433ab;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 40px;
+  border-radius: 10px;
+}
+
+.product .popup-card .close-btn {
+  color: #fff;
+  z-index: 3;
+  position: absolute;
+  right: 0;
+  font-size: 20px;
+  margin: 20px;
+  cursor: pointer;
+}
+
+.product .popup-card .info h2 {
+  color: #fff;
+  font-size: 40px;
+  line-height: 20px;
+  margin: 10px;
+}
+
+.product .popup-card .info h2 span {
+  color: #fff;
+  font-size: 15px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.product .popup-card .info p {
+  font-size: 15px;
+  margin: 10px;
+}
+
+.product .popup-card .info .price {
+  font-size: 45px;
+  font-weight: 300;
+  margin: 10px;
+}
+
+.product .popup-card .info .add-cart-btn {
+  color: #fff;
+  background: #009dd2;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin: 10px auto;
+  padding: 10px 50px;
+  border-radius: 20px;
+}
+
+.product .popup-card .info .add-wish {
+  color: #009dd2;
+  font-size: 16px;
+  text-align: center;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+@media (max-width: 900px) {
   .product .popup-card {
-    position: relative;
-    display: flex;
-    width: 800px;
-    height: 500px;
-    margin: 20px;
-  }
-  
-  .product .popup-card .product-img {
-    z-index: 2;
-    background: #021032;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 45%;
-    height: 90%;
-    transform: translateY(25px);
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
-  
-  .product .popup-card .product-img img {
-    z-index: 2;
-    position: relative;
-    height: 300;
-    width: 250px;
-    border-radius: 10px;
-  }
-  
-  .product .popup-card .info {
-    z-index: 2;
-    background: #0433ab;
-    color: #fff;
-    display: flex;
     flex-direction: column;
-    width: 75%;
-    height: 100%;
-    box-sizing: border-box;
-    padding: 40px;
-    border-radius: 10px;
+    width: 550px;
+    height: auto;
   }
-  
-  .product .popup-card .close-btn {
-    color: #fff;
+
+  .product .popup-card .product-img {
     z-index: 3;
-    position: absolute;
-    right: 0;
-    font-size: 20px;
-    margin: 20px;
-    cursor: pointer;
+    width: 100%;
+    height: 200px;
+    transform: translateY(0);
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
-  
+
+  .product .popup-card .product-img img {
+    left: initial;
+    max-width: 100%;
+  }
+
+  .product .popup-card .info {
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+  }
+
   .product .popup-card .info h2 {
-    color: #fff;
-    font-size: 40px;
-    line-height: 20px;
-    margin: 10px;
+    margin: 20px 5px 5px 5px;
+    font-size: 25px;
   }
-  
+
   .product .popup-card .info h2 span {
-    color: #fff;
-    font-size: 15px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+    font-size: 10px;
   }
-  
+
   .product .popup-card .info p {
-    font-size: 15px;
-    margin: 10px;
+    margin: 5px;
+    font-size: 13px;
   }
-  
+
   .product .popup-card .info .price {
-    font-size: 45px;
-    font-weight: 300;
-    margin: 10px;
+    margin: 5px;
+    font-size: 30px;
   }
-  
+
   .product .popup-card .info .add-cart-btn {
-    color: #fff;
-    background: #009dd2;
-    font-size: 16px;
-    font-weight: 600;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    margin: 10px auto;
-    padding: 10px 50px;
-    border-radius: 20px;
+    margin: 5px;
+    padding: 5px 40px;
+    font-size: 14px;
   }
-  
+
   .product .popup-card .info .add-wish {
-    color: #009dd2;
-    font-size: 16px;
-    text-align: center;
-    font-weight: 600;
-    text-transform: uppercase;
+    font-size: 14px;
   }
-  
-  @media (max-width: 900px) {
-    .product .popup-card {
-      flex-direction: column;
-      width: 550px;
-      height: auto;
-    }
-  
-    .product .popup-card .product-img {
-      z-index: 3;
-      width: 100%;
-      height: 200px;
-      transform: translateY(0);
-      border-bottom-left-radius: 0;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-    }
-  
-    .product .popup-card .product-img img {
-      left: initial;
-      max-width: 100%;
-    }
-  
-    .product .popup-card .info {
-      width: 100%;
-      height: auto;
-      padding: 20px;
-      border-top-right-radius: 0;
-      border-top-left-radius: 0;
-    }
-  
-    .product .popup-card .info h2 {
-      margin: 20px 5px 5px 5px;
-      font-size: 25px;
-    }
-  
-    .product .popup-card .info h2 span {
-      font-size: 10px;
-    }
-  
-    .product .popup-card .info p {
-      margin: 5px;
-      font-size: 13px;
-    }
-  
-    .product .popup-card .info .price {
-      margin: 5px;
-      font-size: 30px;
-    }
-  
-    .product .popup-card .info .add-cart-btn {
-      margin: 5px;
-      padding: 5px 40px;
-      font-size: 14px;
-    }
-  
-    .product .popup-card .info .add-wish {
-      font-size: 14px;
-    }
-  
-    .product .popup-card .close-btn {
-      z-index: 4;
-    }
+
+  .product .popup-card .close-btn {
+    z-index: 4;
   }
-  
+}
