--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -79,9 +79,6 @@
             {{ category }}
           {% endfor %}
           &nbsp;|&nbsp;
-          {% for category2 in product.category2.all %}
-            {{ category2 }}
-          {% endfor %}
         </strong></h6>
         <hr>
         <h6 style="font-size: small; height: 30px;">{{ product.description }}</h6>
@@ -89,7 +86,7 @@
         <h4><strong>{{ product.price|floatformat:0 }} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{ product.rating }}</span></h4>
         
         <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart" role="button">Kosárba</button>
-        <button class="button-33 view" role="button" onclick="openQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{% for category2 in product.category2.all %}{{ category2 }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0 }} Ft', '{{ product.rating }}')">Megtekint</button>
+        <button class="button-33 view" role="button" onclick="openQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0 }} Ft', '{{ product.rating }}')">Megtekint</button>
       </div>
     </div>
   {% endfor %}
@@ -121,10 +118,10 @@
 <script src="{% static 'js/filter.js' %}"></script>
 <!-- Quick View Popup JavaScript -->
 <script type="text/javascript">
- function openQuickView(imageURL, name, brand, category, category2, description, price, rating) {
+ function openQuickView(imageURL, name, brand, category, description, price, rating) {
     document.getElementById('quick-view-image').src = imageURL;
     document.getElementById('quick-view-name').innerHTML = name + '<br><span>' + brand + '</span>';
-    document.getElementById('quick-view-details').innerHTML = category + ' | ' + category2 + '<br>' + description + '<br><strong>' + price + '</strong> <i class="bx bx-star rating-star"></i><span class="rating">' + rating + '</span>';
+    document.getElementById('quick-view-details').innerHTML = category + ' | ' + category + '<br>' + description + '<br><strong>' + price + '</strong> <i class="bx bx-star rating-star"></i><span class="rating">' + rating + '</span>';
     document.getElementById('csiresz').classList.add('active');
   }
 
